WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287568
[GStreamer] Premature finishSeek in progressive video
https://bugs.webkit.org/show_bug.cgi?id=287568
Summary
[GStreamer] Premature finishSeek in progressive video
Enrique Ocaña
Reported
2025-02-12 10:18:21 PST
The MediaPlayerPrivateGStreamer::finishSeek() call is happening before the GStreamer seek completes, causing the JavaScript webpage to see the seek origin position on embedded systems with low CPU power (where seek takes more time to complete). This has been reproduced on Raspberry Pi using downstream wpe-2.38 and wpe-2.46, but I haven't been able to reproduce it on the main branch on desktop with a powerful computer. That doesn't mean that the problem isn't there. See:
https://github.com/WebPlatformForEmbedded/WPEWebKit/issues/1456
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2025-02-12 12:11:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40501
EWS
Comment 2
2025-02-13 04:53:21 PST
Committed
290339@main
(1ba3cb16e390): <
https://commits.webkit.org/290339@main
> Reviewed commits have been landed. Closing PR #40501 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-13 04:54:18 PST
<
rdar://problem/144777975
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug